--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,10 @@
     "require": {},
     "require-dev": {
         "phpunit/phpunit": "^6.2"
+    },
+    "autoload": {
+        "psr-4": {
+            "": "src/"
+        }
     }
 }
