--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,11 @@
             "email": "ikarol@gomel.iba.by"
         }
     ],
-    "require": {},
+    "require": {
+        "zendframework/zend-expressive": "^2.0",
+        "zendframework/zend-expressive-fastroute": "^2.1",
+        "zendframework/zend-servicemanager": "^3.3"
+    },
     "require-dev": {
         "phpunit/phpunit": "^6.2"
     },
